# botman

./: Cargo.toml  Dockerfile  Makefile  README.md
src/: main.rs  spawn.rs  workspace.rs
src/github/: action_parser.rs  client.rs  data.rs  mod.rs
src/github/action/: apply.rs  common.rs  merge_base.rs  mod.rs  parser.rs
src/github/webhook/: guard.rs  mod.rs
src/hacktober/: mod.rs
src/mason/: apply.rs  fixup.rs  generate.rs  merge_base.rs  mod.rs  workspace.rs
src/mason_registry/: fixup.rs  mod.rs
