[package]
name = "botman"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
tokio = { version = "1.19.2", features = ["process"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tempfile = "3"
async-trait = "0.1.56"
hmac = "0.12.1"
sha2 = "0.10.2"
hex = "0.4.3"
lazy_static = "1.4.0"
base64 = "0.13.0"
