[package]
name = "botman"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-recursion = "1.0.4"
async-trait = "0.1.56"
base64 = "0.13.0"
chrono = "0.4.22"
hex = "0.4.3"
hmac = "0.12.1"
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
sha2 = "0.10.2"
tempfile = "3"
tokio = { version = "1.19.2", features = ["process"] }
