[package]
name = "botman"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-recursion = "1.0.5"
async-trait = "0.1.77"
base64 = "0.13.1"
chrono = "0.4.33"
hex = "0.4.3"
hmac = "0.12.1"
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.112"
sha2 = "0.10.8"
tempfile = "3"
tokio = { version = "1.35.1", features = ["process"] }

[dev-dependencies]
indoc = "2"
